2006-01-17  Ralph Campbell  <ralphc@pathscale.com>

	* examples/rc_pingpong.c (main), examples/srq_pingpong.c (main),
	examples/uc_pingpong.c (main), examples/ud_pingpong.c (main): Fix
	race when using CQ events by arming CQ before allowing remote side
	to start sending.

2006-01-06  Roland Dreier  <rdreier@cisco.com>

	* examples/srq_pingpong.c (main): Fix SRQ example to avoid
	problems with many QPs and events.  Based on a patch from Dotan
	Barak (who also found the problem).

2006-01-06  Ralph Campbell  <ralphc@pathscale.com>

	* examples/rc_pingpong.c (main), examples/srq_pingpong.c (main),
	examples/uc_pingpong.c (main), examples/ud_pingpong.c (main): Fix
	test of return value of ibv_poll_cq().

2006-01-04  Dotan Barak  <dotanb@mellanox.co.il>

	* include/infiniband/verbs.h: Fix mask names in description of
	ibv_modify_srq.

2006-01-04  Michael S. Tsirkin  <mst@mellanox.co.il>

	* src/init.c (ibverbs_init): Fix ibverbs_init for multiple adapters.
	Noted by Christoph Raisch.

2005-12-15  Roland Dreier  <rdreier@cisco.com>

	* include/infiniband/verbs.h: Document that devices must be opened
	before calling ibv_free_device_list().
	
	* src/verbs.c (ibv_create_srq): Not all provider libraries will
	support SRQs, so check if the create_srq method is defined before
	calling it.  (Based on a patch from Shirley Ma <xma@us.ibm.com>)

2005-11-11  Roland Dreier  <roland@cisco.com>

	* examples/asyncwatch.c, examples/rc_pingpong.c,
	examples/srq_pingpong.c, examples/uc_pingpong.c,
	examples/ud_pingpong.c, examples/device_list.c,
	examples/devinfo.c: Update examples to match new API.
	
	* include/infiniband/verbs.h, src/device.c, src/init.c,
	src/ibverbs.h: Change from dlist-based ibv_get_devices() API to
	simpler ibv_get_device_list() and ibv_free_device_list() API.

2005-11-10  Sean Hefty  <sean.hefty@intel.com>

	* include/infiniband/sa-kern-abi.h: New include file to contain
	definitions of SA structures passed between userspace and kernel.
