@@ -49,9 +49,7 @@
 #include <arpa/inet.h>
 #include <time.h>
 
-#include <sysfs/libsysfs.h>
-
-#include <infiniband/verbs.h>
+#include "pingpong.h"
 
 enum {
 	PINGPONG_RECV_WRID = 1,
@@ -93,7 +91,7 @@ static uint16_t pp_get_local_lid(struct pingpong_context *ctx, int port)
 	return attr.lid;
 }
 
-static int pp_connect_ctx(struct pingpong_context *ctx, int port,
+static int pp_connect_ctx(struct pingpong_context *ctx, int port, enum ibv_mtu mtu,
 			  const struct pingpong_dest *my_dest,
 			  const struct pingpong_dest *dest)
 {
@@ -102,7 +100,7 @@ static int pp_connect_ctx(struct pingpong_context *ctx, int port,
 	for (i = 0; i < ctx->num_qp; ++i) {
 		struct ibv_qp_attr attr = {
 			.qp_state		= IBV_QPS_RTR,
-			.path_mtu		= IBV_MTU_1024,
+			.path_mtu		= mtu,
 			.dest_qp_num		= dest[i].qpn,
 			.rq_psn 		= dest[i].psn,
 			.max_dest_rd_atomic	= 1,
@@ -226,7 +224,7 @@ out:
 }
 
 static struct pingpong_dest *pp_server_exch_dest(struct pingpong_context *ctx,
-						 int ib_port, int port,
+						 int ib_port, enum ibv_mtu mtu, int port,
 						 const struct pingpong_dest *my_dest)
 {
 	struct addrinfo *res, *t;
@@ -301,7 +299,7 @@ static struct pingpong_dest *pp_server_exch_dest(struct pingpong_context *ctx,
 		       &rem_dest[i].lid, &rem_dest[i].qpn, &rem_dest[i].psn);
 	}
 
-	if (pp_connect_ctx(ctx, ib_port, my_dest, rem_dest)) {
+	if (pp_connect_ctx(ctx, ib_port, mtu, my_dest, rem_dest)) {
 		fprintf(stderr, "Couldn't connect to remote QP\n");
 		free(rem_dest);
 		rem_dest = NULL;
@@ -501,6 +499,7 @@ static void usage(const char *argv0)
 	printf("  -d, --ib-dev=<dev>     use IB device <dev> (default first device found)\n");
 	printf("  -i, --ib-port=<port>   use port <port> of IB device (default 1)\n");
 	printf("  -s, --size=<size>      size of message to exchange (default 4096)\n");
+	printf("  -m, --mtu=<size>       path MTU (default 1024)\n");
 	printf("  -q, --num-qp=<num>     number of QPs to use (default 16)\n");
 	printf("  -r, --rx-depth=<dep>   number of receives to post at a time (default 500)\n");
 	printf("  -n, --iters=<iters>    number of exchanges per QP(default 1000)\n");
@@ -521,6 +520,7 @@ int main(int argc, char *argv[])
 	int                      port = 18515;
 	int                      ib_port = 1;
 	int                      size = 4096;
+	enum ibv_mtu		 mtu = IBV_MTU_1024;
 	int                      num_qp = 16;
 	int                      rx_depth = 500;
 	int                      iters = 1000;
@@ -540,6 +540,7 @@ int main(int argc, char *argv[])
 			{ .name = "ib-dev",   .has_arg = 1, .val = 'd' },
 			{ .name = "ib-port",  .has_arg = 1, .val = 'i' },
 			{ .name = "size",     .has_arg = 1, .val = 's' },
+			{ .name = "mtu",      .has_arg = 1, .val = 'm' },
 			{ .name = "num-qp",   .has_arg = 1, .val = 'q' },
 			{ .name = "rx-depth", .has_arg = 1, .val = 'r' },
 			{ .name = "iters",    .has_arg = 1, .val = 'n' },
@@ -547,7 +548,7 @@ int main(int argc, char *argv[])
 			{ 0 }
 		};
 
-		c = getopt_long(argc, argv, "p:d:i:s:q:r:n:e", long_options, NULL);
+		c = getopt_long(argc, argv, "p:d:i:s:m:q:r:n:e", long_options, NULL);
 		if (c == -1)
 			break;
 
@@ -575,6 +576,13 @@ int main(int argc, char *argv[])
 		case 's':
 			size = strtol(optarg, NULL, 0);
 			break;
+
+		case 'm':
+			mtu = pp_mtu_to_enum(strtol(optarg, NULL, 0));
+			if (mtu < 0) {
+				usage(argv[0]);
+				return 1;
+			}
 
 		case 'q':
 			num_qp = strtol(optarg, NULL, 0);
@@ -673,7 +681,7 @@ int main(int argc, char *argv[])
 	if (servername)
 		rem_dest = pp_client_exch_dest(servername, port, my_dest);
 	else
-		rem_dest = pp_server_exch_dest(ctx, ib_port, port, my_dest);
+		rem_dest = pp_server_exch_dest(ctx, ib_port, mtu, port, my_dest);
 
 	if (!rem_dest)
 		return 1;
@@ -683,7 +691,7 @@ int main(int argc, char *argv[])
 		       rem_dest[i].lid, rem_dest[i].qpn, rem_dest[i].psn);
 
 	if (servername)
-		if (pp_connect_ctx(ctx, ib_port, my_dest, rem_dest))
+		if (pp_connect_ctx(ctx, ib_port, mtu, my_dest, rem_dest))
 			return 1;
 
 	if (servername)
